--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Jammming</title>
+    <link rel="stylesheet" href="reset.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
